--- a/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
+++ b/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
@@ -75,6 +75,7 @@
 .header-section > h2 {
     color: white;
     font-size: 3vh;
+    padding: 0vh 1vh 0vh 1vh;
 }
 
 .subheader-section{
